# sudoku-generator-rs

./: .gitignore  Cargo.toml  Makefile  Readme.md  benchmark-results  build-run-asm.sh  build-run-wash.sh  generateBoards.js  generateBoardsRsLoop.js  hello.js  out.asm.html  out.html  run-benchmarks.sh
src/: bin.rs  lib.rs  main.rs  sudoku_generator.rs
