[package]
name = "sudoku-generator-rs"
version = "0.1.0"
authors = ["Ross Harrison <rtharrison86@gmail.com>"]

[dependencies]
rand = "0.3"
time = "0.1"
wasm-bindgen = "0.2.28"

[lib]
crate-type = ["cdylib"]
name = "sudoku_generator"
path = "src/sudoku_generator.rs"

[[bin]]
name = "runner"
path = "src/bin.rs"
